@@ -14,6 +14,11 @@
 #include <Plasma/Package>
 #include <Plasma/PackageMetadata>
 
+const QString PackageModel::dataengineType = "Plasma/DataEngine";
+const QString PackageModel::runnerType = "Plasma/Runner";
+const QString PackageModel::themeType = "Plasma/Theme";
+const QString PackageModel::plasmoidType = "Plasma/Applet";
+
 PackageModel::PackageModel(QObject *parent)
         : QAbstractItemModel(parent),
         m_directory(0),
