@@ -18,30 +18,37 @@
 #include <KZip>
 
 #include "publisher.h"
+#include "../packagemodel.h"
 
-Publisher::Publisher(QWidget *parent, const KUrl &path)
+Publisher::Publisher(QWidget *parent, const KUrl &path, const QString& type)
     :QWidget(parent),
-    m_projectPath(path)
+    m_projectPath(path),
+    m_projectType(type)
 {
-    // something simple and plasmoid-specific for now
     // These should probably be refined at some point
-    QString exportLabel = i18n("Export plasmoid");
-    QString exportText = i18n("Choose a target file to export the current plasmoid to an installable package file on your system.");
-    QString installLabel = i18n("Install plasmoid");
-    QString installText = i18n("Click to install the current plasmoid directly onto your computer.");
-    QString publishLabel = i18n("Publish plasmoid");
-    QString publishText = i18n("Click to publish the current plasmoid online, so that other people can find and install it using the Internet.");
+    QString exportLabel = i18n("Export project");
+    QString exportText = i18n("Choose a target file to export the current project to an installable package file on your system.");
+    QString installLabel = i18n("Install project");
+    QString installText = i18n("Click to install the current project directly onto your computer.");
+    QString publishLabel = i18n("Publish project");
+    QString publishText = i18n("Click to publish the current project online, so that other people can find and install it using the Internet.");
+    
+    m_extension = type == PackageModel::plasmoidType ? "plasmoid" : "zip";
 
     m_exporterUrl = new KUrlRequester(this);
-    m_exporterUrl->setFilter("*.plasmoid");
+    m_exporterUrl->setFilter(QString("*.") + m_extension);
     m_exporterUrl->setMode(KFile::File | KFile::LocalOnly);
 
-    m_exporterButton = new QPushButton(i18n("Export current plasmoid"), this);
-    m_installerButton = new QPushButton(i18n("Install current plasmoid"), this);
-    m_publisherButton = new QPushButton(i18n("Publish current plasmoid"), this);
+    m_exporterButton = new QPushButton(i18n("Export current project"), this);
+    m_installerButton = new QPushButton(i18n("Install current project"), this);
+    m_publisherButton = new QPushButton(i18n("Publish current project"), this);
 
     // Disable publish button first since it isn't implemented.
     m_publisherButton->setEnabled(false);
+    // Installing only works for Plasmoids
+    if (type != PackageModel::plasmoidType) {
+        m_installerButton->setEnabled(false);
+    }
 
     connect(m_exporterUrl, SIGNAL(urlSelected(const KUrl&)), this, SLOT(addSuffix()));
     connect(m_exporterButton, SIGNAL(clicked()), this, SLOT(doExport()));
@@ -88,8 +95,8 @@ void Publisher::addSuffix()
 {
     QString selected = m_exporterUrl->url().path();
     QString suffix = QFileInfo(selected).suffix();
-    if (suffix != "plasmoid" && suffix != "zip") {
-        m_exporterUrl->setUrl(selected + ".plasmoid");
+    if (suffix != m_extension && suffix != "zip") {
+        m_exporterUrl->setUrl(selected + "." + m_extension);
     }
 }
 
@@ -102,11 +109,12 @@ void Publisher::doExport()
     }
     bool ok = exportPackage(m_projectPath, m_exporterUrl->url());
     if (QFile::exists(m_exporterUrl->url().path()) && ok)
-        KMessageBox::information(this, i18n("Plasmoid has been exported to %1.", m_exporterUrl->url().path()));
+        KMessageBox::information(this, i18n("Project has been exported to %1.", m_exporterUrl->url().path()));
     else
         KMessageBox::error(this, i18n("An error has occurred during the export. Please check the write permissions in the target directory."));
 }
 
+// Plasmoid specific, for now
 void Publisher::doInstall()
 {
     KUrl tempPackage(m_projectPath.path(KUrl::AddTrailingSlash) + "package.plasmoid");
